Refactor: layout de experiencia y proyectos + fixes varios

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,10 +1,10 @@
 ---
-import Django from "../components/icons/Django.astro";
-import Python from "../components/icons/Python.astro";
-import Html from "../components/icons/Html.astro";
 import Css from "../components/icons/Css.astro";
+import Django from "../components/icons/Django.astro";
+import Html from "../components/icons/Html.astro";
 import JavaScript from "../components/icons/JavaScript.astro";
 import PostgreSQL from "../components/icons/PostgreSQL.astro";
+import Python from "../components/icons/Python.astro";
 const TAGS = {
     DJANGO:{
         name: "Django",
@@ -39,8 +39,8 @@ const TAGS = {
 };
 const PROJECTS = [
     {
-        title: "Back Travel",
-        description: "Back Travel es un back office para agencias de vuelo",
+        title: "Back-Travel",
+        description:"Back-Travel, Back Office para las agencias de viajes que no quieren perder tiempo en facturar.",
         link: "https://back-travel.com/",
         image:"public/projects/proyectobacktravel.png",
         tags: [TAGS.DJANGO, TAGS.PYTHON, TAGS.POSTGRESQL, TAGS.HTML, TAGS.CSS, TAGS.JAVASCRIPT],
@@ -48,21 +48,30 @@ const PROJECTS = [
 ]
 ---
 {
-    PROJECTS.map(({image, title, description,tags}) => (
-        <article>
-            <h3 class="text-2xl font-semibold text-purple-400 opacity-60">{title}</h3>
-            <p class="text-lg mb-4 text-pretty" >{description}</p>
-            <ul class="flex flex-row">
-                {tags.map(tag => (
-                    <li>
-                        <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}>
-                            <tag.icon class="size-6"/>
-                            {tag.name}
-                        </span>
-                    </li>
-                ))}
-            </ul>
-            <img class="rounded shadow-2xl shadow-white/20" src={image} alt={title} />
-        </article>
-    ))
+  PROJECTS.map(({ image, title, description, tags, link }) => (
+    <article class="flex gap-6 items-start mb-8">
+      
+      <a href={link} target="_blank" rel="noopener noreferrer">
+        <img
+          class="w-130 h-auto rounded shadow-2xl shadow-white/20 transition duration-500 hover:scale-105"
+          src={image}
+          alt={title}
+        />
+      </a>
+      <div class="flex flex-col justify-start">
+        <h3 class="text-2xl font-semibold text-purple-400 opacity-60">{title}</h3>
+        <p class="text-lg mb-4 text-pretty">{description}</p>
+        <ul class="flex flex-wrap gap-2">
+          {tags.map((tag) => (
+            <li>
+              <span class={`flex items-center gap-x-2 rounded-full text-x ${tag.class} py-2 px-2`}>
+                <tag.icon class="size-7" />
+                {tag.name}
+              </span>
+            </li>
+          ))}
+        </ul>
+      </div>
+    </article>
+  ))
 }
