--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer class="rounded-lg shadow-sm m-4 bg-black/40 backdrop-blur-lg">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm  sm:text-center text-purple-400 opacity-80">© 2025 <a href="https://torev-dev/" class="hover:underline">Flowbite™</a>. Casi todos los derechos reservados.
+      <span class="text-sm  sm:text-center text-purple-400 opacity-80">© 2025 <a href="https://torev-dev/" class="hover:underline"></a>. Casi todos los derechos reservados.
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
