--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -1,6 +1,8 @@
 ---
 const { class: className, id } = Astro.props;
 ---
-<section id={id} class={`w-full mx-auto lg:w-[740px] pb-25 ${className}`}>
+<section id={id} class={`w-full mx-auto max-w-[740px] py-12´ ${className} `}>
   <slot />
 </section>
+
+
