--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '@fontsource-variable/onest';
+import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import '../styles/global.css';
 
@@ -16,10 +17,11 @@ const { title , description} = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
   </head>
-  <body>
-    <div class="absolute top-0 z-[-2] h-screen w-screen bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"></div>
+  <body class="bg-neutral-950">
+    <div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div>
 	<Header />
 	<slot />
+  <Footer/>
   </body>
 </html>
 
@@ -35,7 +37,6 @@ const { title , description} = Astro.props;
   }
   
   body {
-	background: #030101;
   display: flex;
 	flex-direction: column;
 	min-height: 100vh;
