--- a/src/components/Experiencie.astro
+++ b/src/components/Experiencie.astro
@@ -17,6 +17,22 @@ const EXPERIENCIE = [
     link: "#",
     linkText: "Learn more",
   },
+  {
+    title: "Programador Full Stack",
+    company: "EMOVEERE CONSULTING S.L",
+    description: [
+      "Desarrollador del proyecto Back-Travel, en el que desarrollamos un back office para agencias de viajes. ",
+      "Creé tanto el back como el front para la creación de Expedientes, Reservas, Clientes Empresa y Clientes Persona. ",
+      "Incluye módulos de Oficinas, Proveedores, Prestatarios y Servicios asociados al expediente. ",
+      "Implementación de la integración con los Endpoints de Business Central. ",
+      "Todo el desarrollo de las mismas en BBDD, creando funciones para la validación de Emails, Teléfonos, NIF y NIE. ",
+      "Desarrollé triggers para la funcionalidad en cadena de los módulos. "
+    ],
+    date: "Julio 2024 -> Julio 2025",
+    link: "#",
+    linkText: "Learn more",
+  }
+  
 ];
 ---
 
