--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import Layout from "../layouts/Layout.astro";
     <SectionContainer class="py-4 pb-24">
         <img 
           class="rounded-full w-15 h-15 mb-5"
-          src="https://media.licdn.com/dms/image/v2/D4D03AQHQIsyWiwgPQw/profile-displayphoto-scale_200_200/B4DZfCkYRhH4AY-/0/1751316007043?e=1758153600&v=beta&t=hRlchhOBZhQ8d1P04-qVTWtIvMIPGk4MtmEJjm2-UO0"
+          src=""
           alt="Foto Gabriel" 
         />
       <h1 
